THRIFT-4290: Fixed csharp:nullable code generation for non-required enum fields with default values Client: cs

This closes #1347